Fix pubspec.yaml Dependencies and Assets Configuration
In this commit, we address the following issues in the 'pubspec.yaml' file:

- Corrected project name
- Fixed the assets configuration to ensure proper asset inclusion.

These changes ensure that the project's dependencies and assets are accurately configured and will function as expected.

--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -1,4 +1,4 @@
-name: authentication
+name: finanseeup
 description: A new Flutter project.
 # The following line prevents the package from being accidentally published to
 # pub.dev using `flutter pub publish`. This is preferred for private packages.
@@ -48,7 +48,6 @@ flutter:
   uses-material-design: true
   assets:
     - assets/
-    - assets/images/
   fonts:
       - family: Poppins
         fonts:
