--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -23,6 +23,10 @@ dependencies:
   # The following adds the Cupertino Icons font to your application.
   # Use with the CupertinoIcons class for iOS style icons.
   cupertino_icons: ^1.0.2
+  sidebarx: ^0.16.3
+  animated_tree_view: ^2.1.0
+  provider: ^6.1.1
+
 
 
 dev_dependencies:
