--- a/android/app/build.gradle
+++ b/android/app/build.gradle
@@ -63,5 +63,10 @@ android {
 flutter {
     source '../..'
 }
+apply plugins:'com.android.application'
+apply plugins:'com.google.gms.google-services'
 
-dependencies {}
+dependencies {
+    implementation("com.google.firebase:firebase-analytics")
+    implementation(platform("com.google.firebase:firebase-bom:32.6.0"))
+}
