Feat(Crud Accounts)

--- a/android/app/src/main/AndroidManifest.xml
+++ b/android/app/src/main/AndroidManifest.xml
@@ -4,6 +4,7 @@
     <uses-feature android:name="android.hardware.camera.autofocus" />
     <application
         android:label="finanseeup"
+        android:allowBackup="true"
         android:name="${applicationName}"
         android:icon="@mipmap/ic_launcher">
         <activity
