--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -24,6 +24,9 @@ dependencies:
   mvc_pattern: ^8.12.0
   shared_preferences: ^2.2.2
   connectivity_plus: ^5.0.2
+  firebase_database: ^10.3.8
+  path: ^1.8.3
+  workmanager: ^0.5.2
   lottie: ^2.7.0
   flutter_svg: ^2.0.9
   google_sign_in: ^6.2.1
@@ -33,13 +36,14 @@ dependencies:
   onscreen_num_keyboard: ^1.0.4
   currency_picker: ^2.0.19
   json_annotation: ^4.8.1
-  intl: ^0.19.0
+  intl: ^0.17.0
   color: ^3.0.0
   multi_select_flutter: ^4.1.3
   flutter_colorpicker: ^1.0.3
   image_picker: ^1.0.5
   permission_handler: ^11.1.0
   charts_flutter: ^0.12.0
+
 
 
   get_storage:
@@ -58,6 +62,7 @@ dev_dependencies:
   json_annotation: ^4.8.1
   json_serializable: ^6.7.1
   build_runner: ^2.4.7
+
 
 # For information on the generic Dart part of this file, see the
 # following page: https://dart.dev/tools/pub/pubspec
